add style for page loading

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* @import url('https://fonts.googleapis.com/css2?family=Diplomata&family=Dongle&family=Raleway+Dots&display=swap') */
+
+
+/* *{
+  font-family: "Diplomata", serif;
+  font-weight: 400;
+  font-style: nor
+} */
+.loading-title{
+  font-size: 20px;
+
+}
